# mat_ecc_ram

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/bch_codec/: bch_codec.c  bch_codec.h  readme.txt
src/: main.cpp
src/ecc/: bch.cpp  bch.hpp  ecc.hpp  hamming.cpp  hamming.hpp  hsiao.cpp  hsiao.hpp
src/util/: noise.c  noise.h
